Fixed horizontal scroll caused by footer

--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,6 +1,6 @@
 .m-t-10 {
     margin-top: 10vh;
-    width: 100vw;
+    width: 100%;
 }
 
 p {
